tests/baselines/reference/ES5SymbolProperty5.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty5.ts(7,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/Symbols/ES5SymbolProperty5.ts (1 errors) ====
    var Symbol: { iterator: symbol };
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator](0) // Should error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.